# gpu-llm-benchmarking

./: .env.example  .gitignore  Dockerfile.ollama  LICENSE  README.md  pyproject.toml
.forgejo/workflows/: build_vast.ai_image.yaml
.github/workflows/: docker-build.yml
docs/: python-sdk-usage.md
results/: README.md
scripts/: README.md  llm_benchmark.py  run_vast.ai_benchmark.py
scripts/helpers/: __init__.py  interactive.py  logger.py  models.py  nvidia_gpu_monitor.py  ollama_client.py  ollama_manager.py  prompt_generator.py  results_manager.py  vastai_api.py  vastai_instance.py
